--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+falcon = "*"
+gunicorn = "*"
+
+[dev-packages]
 ipython = "*"
 pytest = "*"
 pytest-cov = "*"
-
-[dev-packages]
+pycodestyle = "*"
 
 [requires]
 python_version = "3.6"
